Fixed - BlackCart button is not showing up on https://www.hollisterco.ca

--- a/styles/main.less
+++ b/styles/main.less
@@ -42,6 +42,9 @@
   &.blackcart-retailer-the-shoe-company {
     z-index: 10000;
   }
+  &.blackcart-retailer-hollister {
+    z-index: 10000;
+  }
   &.blackcart-retailer-town-shoes {
     z-index: 10000;
   }
@@ -312,5 +315,11 @@ body.blackcart-login {
     img {
       height: 80px;
     }
+  }
+}
+
+.product__actions--availability-wrapper{
+  .blackcart-btn-wrapper{
+    margin-left: 10px;
   }
 }
